Fix overflow handling in main page

--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -27,19 +27,21 @@ body {
     flex: 1;
     flex-direction: row;
     box-sizing: border-box;
-    overflow: auto;
+    overflow: hidden;
 }
 
 .left {
     width: 12vw;
     box-sizing: border-box;
     border: 1px solid black;
+    overflow: auto;
 }
 
 .right {
     width: 88vw;
     box-sizing: border-box;
     border: 1px solid black;
+    overflow: auto;
 }
 
 .footer {
